c2/qsearch
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/qsearch/src/search.c:1048:12: error: expected expression
*( _OWORD *)&pv[0][v32 / 3 + v33 / 0x18].from = *( _OWORD *)&v58[v20].from; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/qsearch/src/search.c:1048:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&pv[0][v32 / 3 + v33 / 0x18].from = *( _OWORD *)&v58[v20].from; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/qsearch/src/search.c:1048:60: error: expected expression
*( _OWORD *)&pv[0][v32 / 3 + v33 / 0x18].from = *( _OWORD *)&v58[v20].from; 
                                                           ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/qsearch/src/search.c:1048:52: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&pv[0][v32 / 3 + v33 / 0x18].from = *( _OWORD *)&v58[v20].from; 
                                                   ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/qsearch/src/search.c:1059:12: error: expected expression
*( _OWORD *)&pv[v33 / 0x1C20][v37].from = *( _OWORD *)&pv[0][301 * v34].from; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/qsearch/src/search.c:1059:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&pv[v33 / 0x1C20][v37].from = *( _OWORD *)&pv[0][301 * v34].from; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/qsearch/src/search.c:1059:54: error: expected expression
*( _OWORD *)&pv[v33 / 0x1C20][v37].from = *( _OWORD *)&pv[0][301 * v34].from; 
                                                     ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/qsearch/src/search.c:1059:46: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&pv[v33 / 0x1C20][v37].from = *( _OWORD *)&pv[0][301 * v34].from; 
                                             ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/qsearch/src/search.c:1070:12: error: expected expression
*( _OWORD *)&v38[v33] = *( _OWORD *)&v38[v39]; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/qsearch/src/search.c:1070:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v38[v33] = *( _OWORD *)&v38[v39]; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/qsearch/src/search.c:1070:36: error: expected expression
*( _OWORD *)&v38[v33] = *( _OWORD *)&v38[v39]; 
                                   ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/qsearch/src/search.c:1070:28: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v38[v33] = *( _OWORD *)&v38[v39]; 
                           ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/qsearch/src/search.c:1071:12: error: expected expression
*( _OWORD *)&v38[v33 + 24] = *( _OWORD *)&v38[v39 + 24]; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/qsearch/src/search.c:1071:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v38[v33 + 24] = *( _OWORD *)&v38[v39 + 24]; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/qsearch/src/search.c:1071:41: error: expected expression
*( _OWORD *)&v38[v33 + 24] = *( _OWORD *)&v38[v39 + 24]; 
                                        ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/qsearch/src/search.c:1071:33: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v38[v33 + 24] = *( _OWORD *)&v38[v39 + 24]; 
                                ^
16 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/qsearch/src/obj/search.o] Error 1
